--- a/ping/package.json
+++ b/ping/package.json
@@ -9,6 +9,7 @@
   "author": "Sergey Koshman",
   "license": "ISC",
   "devDependencies": {
+    "bower": "^1.8.0",
     "clean": "^4.0.2",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-autoprefixer": "^3.1.1",
