pingbuller - production ready, fix bags, minify js, css and img

--- a/ping/bower.json
+++ b/ping/bower.json
@@ -22,7 +22,7 @@
   "dependencies": {
     "jquery": "^3.2.1",
     "bootstrap": "^3.3.7",
-    "normalize-strings": "normalize#^1.1.0",
-    "normalize-css": "^6.0.0"
+    "normalize-css": "^6.0.0",
+    "paroller.js": "*"
   }
 }
