--- a/cf-maker/package.json
+++ b/cf-maker/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coffee",
-  "version": "0.1.0",
+  "version": "0.6.0",
   "description": "project for dev-challenge",
   "main": "index.html",
   "dependencies": {},
@@ -13,15 +13,17 @@
     "gulp-csso": "^3.0.0",
     "gulp-eslint": "^3.0.1",
     "gulp-imagemin": "^3.2.0",
+    "gulp-minify": "0.0.15",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.5.1",
     "gulp-uglify": "^2.1.2",
-    "imagemin-pngquant": "^5.0.0"
+    "imagemin-pngquant": "^5.0.0",
+    "rellax": "^1.0.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Sergey Koshman",
+  "author": "",
   "license": "ISC"
 }
