--- a/sedona/package.json
+++ b/sedona/package.json
@@ -9,9 +9,11 @@
   "author": "Sergey Koshman",
   "license": "ISC",
   "devDependencies": {
+    "babel-preset-es2015": "^6.24.1",
     "clean": "^4.0.2",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-autoprefixer": "^3.1.1",
+    "gulp-babel": "^6.1.2",
     "gulp-cache": "^0.4.6",
     "gulp-concat": "^2.6.1",
     "gulp-csso": "^3.0.0",
