--- a/sedona/bower.json
+++ b/sedona/bower.json
@@ -16,6 +16,7 @@
     "tests"
   ],
   "dependencies": {
-    "normalize-css": "normalize.css#^6.0.0"
+    "normalize-css": "normalize.css#^6.0.0",
+    "moveto": "moveTo#^1.6.1"
   }
 }
