--- a/beside/package.json
+++ b/beside/package.json
@@ -6,6 +6,7 @@
   "dependencies": {},
   "devDependencies": {
     "clean": "^4.0.2",
+    "del": "^2.2.2",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-cache": "^0.4.6",
