--- a/beside/package.json
+++ b/beside/package.json
@@ -16,8 +16,11 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.5.1",
+    "gulp-svg-sprite": "^1.3.6",
+    "gulp-svg-sprites": "^4.1.1",
     "imagemin-pngquant": "^5.0.0",
-    "normalize-css": "^2.3.1"
+    "normalize-css": "^2.3.1",
+    "svg-sprite": "^1.3.6"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
