--- a/beside/package.json
+++ b/beside/package.json
@@ -6,7 +6,6 @@
   "dependencies": {},
   "devDependencies": {
     "clean": "^4.0.2",
-    "del": "^2.2.2",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-cache": "^0.4.6",
@@ -16,11 +15,8 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.5.1",
-    "gulp-svg-sprite": "^1.3.6",
-    "gulp-svg-sprites": "^4.1.1",
     "imagemin-pngquant": "^5.0.0",
-    "normalize-css": "^2.3.1",
-    "svg-sprite": "^1.3.6"
+    "normalize-css": "^2.3.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
