--- a/port/package.json
+++ b/port/package.json
@@ -4,13 +4,7 @@
   "description": "portfolio-project",
   "main": "index.html",
   "dependencies": {},
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Sergey Koshman",
-  "license": "ISC",
-    "devDependencies": {
+  "devDependencies": {
     "babel-preset-es2015": "^6.24.1",
     "clean": "^4.0.2",
     "gulp": "github:gulpjs/gulp#4.0",
@@ -20,11 +14,16 @@
     "gulp-concat": "^2.6.1",
     "gulp-csso": "^3.0.0",
     "gulp-eslint": "^3.0.1",
-    "gulp-minify": "0.0.15",
     "gulp-imagemin": "^3.2.0",
+    "gulp-minify": "0.0.15",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.5.1",
     "imagemin-pngquant": "^5.0.0"
-  }
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Sergey Koshman",
+  "license": "ISC"
 }
