--- a/angular1.x/booky/package.json
+++ b/angular1.x/booky/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "angular": "1",
+    "angular-ui-router": "^1.0.3",
     "bootstrap": "^3.3.7"
   }
 }
