--- a/angular1.x/booky/package.json
+++ b/angular1.x/booky/package.json
@@ -9,5 +9,8 @@
     "angular": "1.6",
     "angular-route": "^1.6.5",
     "bootstrap": "^3.3.7"
+  },
+  "devDependencies": {
+    "node-static": "^0.7.9"
   }
 }
