--- a/angular1.x/booky/package.json
+++ b/angular1.x/booky/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "angular": "1.6",
     "angular-route": "^1.6.5",
+    "angular-ui-router": "^1.0.3",
     "bootstrap": "^3.3.7"
   },
   "devDependencies": {
