--- a/angular1.x/booky/package.json
+++ b/angular1.x/booky/package.json
@@ -9,7 +9,8 @@
     "angular": "1.6",
     "angular-route": "^1.6.5",
     "angular-ui-router": "^1.0.3",
-    "bootstrap": "^3.3.7"
+    "bootstrap": "^3.3.7",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "node-static": "^0.7.9"
