--- a/angular1.x/booky/package.json
+++ b/angular1.x/booky/package.json
@@ -10,8 +10,7 @@
     "angular-animate": "^1.6.5",
     "angular-route": "^1.6.5",
     "angular-ui-router": "^1.0.3",
-    "bootstrap": "^3.3.7",
-    "underscore": "^1.8.3"
+    "bootstrap": "^3.3.7"
   },
   "devDependencies": {
     "node-static": "^0.7.9"
