--- a/angular1.x/booky/package.json
+++ b/angular1.x/booky/package.json
@@ -13,6 +13,9 @@
     "bootstrap": "^3.3.7"
   },
   "devDependencies": {
+    "eslint": "^4.3.0",
+    "eslint-config-airbnb-base": "^11.3.1",
+    "eslint-plugin-import": "^2.7.0",
     "node-static": "^0.7.9"
   }
 }
