--- a/tsTodo/package.json
+++ b/tsTodo/package.json
@@ -7,6 +7,7 @@
   "author": "Sergey Koshman <koshman.animys@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@types/angular": "^1.6.31",
     "angular": "^1.6.4",
     "normalize-css": "^2.3.1"
   },
