--- a/some/package.json
+++ b/some/package.json
@@ -24,10 +24,11 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "core-js": "^2.4.1",
-    "rxjs": "^5.4.2",
-    "zone.js": "^0.8.14",
     "ng2f-bootstrap": "~0.0.4",
-    "ng2f-server": "~0.2.3"
+    "ng2f-server": "~0.2.3",
+    "rxjs": "^5.4.2",
+    "toastr": "^2.1.2",
+    "zone.js": "^0.8.14"
   },
   "devDependencies": {
     "@angular/cli": "1.3.2",
