--- a/some/package.json
+++ b/some/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "core-js": "^2.4.1",
+    "jquery": "^3.2.1",
     "ng2f-bootstrap": "~0.0.4",
     "ng2f-server": "~0.2.3",
     "rxjs": "^5.4.2",
@@ -36,7 +37,9 @@
     "@angular/language-service": "^4.2.4",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
+    "@types/jquery": "^3.2.12",
     "@types/node": "~6.0.60",
+    "@types/toastr": "^2.1.35",
     "codelyzer": "~3.1.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
