--- a/webpack-study/package.json
+++ b/webpack-study/package.json
@@ -9,8 +9,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^7.1.4",
     "babel-core": "^6.25.0",
-    "babel-loader": "^7.0.0",
+    "babel-loader": "^6.0.0",
+    "css-loader": "^0.28.7",
+    "express": "^4.15.4",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "postcss": "^6.0.11",
+    "postcss-loader": "^2.0.6",
+    "precss": "^2.0.0",
     "webpack": "^1.15.0"
+  },
+  "dependencies": {
+    "path": "^0.12.7"
   }
 }
