--- a/node/simple-serv/package.json
+++ b/node/simple-serv/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "mime": "^2.1.0"
   }
 }
