--- a/node/chat/package.json
+++ b/node/chat/package.json
@@ -3,16 +3,20 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "serve": "NODE_ENV=dev;NODE_PATH=. node app.js"
   },
   "dependencies": {
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
+    "ejs-locals": "^1.0.2",
     "express": "~4.15.5",
     "morgan": "~1.9.0",
-    "serve-favicon": "~2.4.5"
+    "nconf": "^0.10.0",
+    "serve-favicon": "~2.4.5",
+    "winston": "^2.4.0"
   },
   "devDependencies": {
     "errorhandler": "^1.5.0"
