--- a/node/chat/package.json
+++ b/node/chat/package.json
@@ -13,6 +13,7 @@
     "ejs": "~2.5.7",
     "ejs-locals": "^1.0.2",
     "express": "~4.15.5",
+    "mongodb": "^3.0.1",
     "morgan": "~1.9.0",
     "nconf": "^0.10.0",
     "serve-favicon": "~2.4.5",
