--- a/react-exp/package.json
+++ b/react-exp/package.json
@@ -15,6 +15,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "flow-bin": "^0.64.0"
+    "flow-bin": "^0.64.0",
+    "prop-types": "^15.6.0"
   }
 }
