add select from external package

--- a/react-exp/package.json
+++ b/react-exp/package.json
@@ -6,7 +6,8 @@
     "bootstrap": "^4.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.1.0"
+    "react-scripts": "1.1.0",
+    "react-select": "v1.0.0-rc.5"
   },
   "scripts": {
     "start": "react-scripts start",
