--- a/react-exp/package.json
+++ b/react-exp/package.json
@@ -7,7 +7,8 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.0",
-    "react-select": "v1.0.0-rc.5"
+    "react-select": "v1.0.0-rc.5",
+    "react-transition-group": "^2.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
